# python-project-template

./: .gh-labels.sh  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  copier.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docs.yml.jinja  labeler.yml  publish.yml.jinja
.license/: ARL-1.1.txt  Apache-2.0.txt  BSD-3-Clause.txt  GPL-3.0.txt  README.md
docs/: conf.py  index.rst
project/: README.md  __init__.py  main.py
scripts/: copier_post_gen.py.jinja
tests/: __init__.py  test_example.py
