[project]
name = "<PROJECT_NAME>"
version = "<VERSION>"
description = "<PROJECT_DESCRIPTION>"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "<LICENSE_NAME>" }
keywords = ["python", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "<REPOSITORY_URL>"
Issues = "<REPOSITORY_URL>/issues"

dependencies = [
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
    "myst-parser>=5.0.0",
    "numpydoc>=1.10.0",
    "pydata-sphinx-theme>=0.16.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "W", "ANN", "C4", "SIM", "RUF", "PT", "D"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["<PACKAGE_NAME>"]
combine-as-imports = true
force-single-line = false
split-on-trailing-comma = true
force-sort-within-sections = true

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]
strict = true
